[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/dialogs/ConfirmDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ConfirmDialog" type="CanvasLayer"]
layer = 8
script = ExtResource( 1 )

[node name="Root" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Root"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Root/VBoxContainer"]
margin_top = 464.0
margin_right = 1920.0
margin_bottom = 504.0
size_flags_vertical = 1
text = "Confirm question?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Root/VBoxContainer"]
margin_top = 536.0
margin_right = 1920.0
margin_bottom = 616.0
custom_constants/separation = 32
alignment = 1

[node name="ConfirmButton" type="Button" parent="Root/VBoxContainer/HBoxContainer"]
margin_left = 844.0
margin_right = 944.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
mouse_default_cursor_shape = 2
text = "Yes"

[node name="CancelButton" type="Button" parent="Root/VBoxContainer/HBoxContainer"]
margin_left = 976.0
margin_right = 1076.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
mouse_default_cursor_shape = 2
text = "No"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Root")
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 2 )

[connection signal="pressed" from="Root/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Root/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
